@@ -1,3 +1,5 @@
+29-Jan-2011 Issue #23. GCC internal include paths are different on 64-bit Linux to 32-bit.
+
 29-Jan-2011 Attempt at fixing OSUtilities detection of 64-bit Linux. Will fail on a 32-bit OS running on a 64-bit processor.
 
 29-Jan-2011 Removed Opus.Core.IOutputPaths. Instead, Opus.Core.BaseOptionCollections has a property to assign new OutputPaths via a dictionary mechanism of a key (to identify different files) and a string (for the pathname of said file). The key must be derived from Opus.Core.FlagsBase, which is a class that simulates a derivable enum of values that are power of 2 (bitfield flags). OptionCollections are now simpler to implement. PostExecutes for builders have also changed to now accept a NodeCollection as the argument to give more context to the data.
